<resources>
    <string name="app_name">小站学习平台</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- base -->
    <string name="go_back">返回</string>
    <string name="unit_day">天</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="be_sure">确认</string>
    <string name="finish">完成</string>
    <string name="submit">提交</string>
    <string name="close">关闭</string>
    <string name="download">下载</string>
    <string name="loading">载入中，请稍后...</string>
    <string name="network_disconnect">没有可用网络</string>
    <string name="network_timeout">请求超时，请重试!</string>
    <string name="json_syntax_error">数据格式错误</string>

    <!-- 工具类 -->
    <string name="utils_share">分享</string>
    <string name="utils_please_choose">请选择</string>
    <string name="utils_token_timeout">token无效或者已过期，请重新登录!</string>

    <!--版本升级-->
    <string name="new_version">发现新版本</string>
    <string name="update_now">立即更新</string>

    <!-- network-->
    <string name="json_format_error">Josn 数据格式错误</string>
    <string name="unknow_service_error">服务器未知错误</string>
    <string name="download_fialed">下载失败</string>
    <string name="network_error">获取数据失败,请检查网络连接!</string>
    <string name="no_network_error">没有连接到网络!</string>
    <string name="network_query_data_failed">获取数据失败,请重试!</string>
    <string name="no_more_data">已经到底了！</string>
    <string name="network_download_path_null">下载地址为空!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- 登录 -->
    <string name="login_title">登录</string>
    <string name="login_input_student_no">请输入您的学号</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_logining">登录中，请稍后...</string>
    <string name="login_success">登录成功！</string>

    <!-- 课表 -->
    <string name="timetable_title">课表</string>
    <string name="timetable_test_date">考试日期 :</string>

    <!-- 课程评价 -->
    <string name="teacher_appraise">课程评价</string>
    <string name="tv_teacher_appraise_prepare_lesson">备课</string>
    <string name="tv_teacher_appraise_communicate">沟通</string>
    <string name="tv_teacher_appraise_give_lesson">授课</string>
    <string name="tv_teacher_appraise_message">通讯</string>
    <string name="teacher_appraise_prepare_lesson">整体体验</string>
    <string name="teacher_appraise_communicate">态度良好,耐心引导</string>
    <string name="teacher_appraise_give_lesson">逻辑清晰,节奏适中</string>
    <string name="teacher_appraise_message">针对性强,收获明显</string>
    <string name="teacher_appraise_suggestion">请写下您对老师和本节课的整体意见和建议,我们会对\n您的评价对老师的教学做出及时改进</string>
    <string name="no_teacher_appraise">请完成所有评价</string>
    <string name="no_teacher_appraise_no_reason">请选择课程未正常完成原因</string>
    <string name="no_teacher_appraise_other_reason">请填写完整其他原因</string>
    <string name="no_teacher_appraise_lesson">请对备课做出评价</string>
    <string name="no_teacher_appraise_communicate">请对沟通做出评价</string>
    <string name="no_teacher_appraise_give_lesson">请对授课做出评价</string>
    <string name="no_teacher_appraise_message">请对通讯做出评价</string>
    <string name="no_teacher_appraise_suggestion">请输入您的意见和建议</string>
    <string name="teacher_appraise_sucess">评价成功！</string>
    <string name="teacher_appraise_thanks">感谢您的评价!</string>
    <string name="teacher_appraise_other_reason">请写下您未正常上完课程的原因,我们会根据您的评价\n对老师的教学做出及时改进</string>

    <!-- 消息 -->
    <string name="message_title">消息</string>
    <string name="message_my">我的消息</string>
    <string name="message_loading">消息加载中...</string>

    <!-- 我的 -->
    <string name="my_title">我的</string>
    <string name="mine_setting">设置</string>
    <string name="mine_course_rate">课程进度</string>
    <string name="mine_study_adviser">班主任</string>
    <string name="mine_study_adviser_name">Hi 我是你的专属班主任</string>
    <string name="mine_study_phone">电话咨询</string>
    <string name="mine_lesson_period">总课时：</string>
    <string name="mine_remainder_lesson_period">剩余课时：</string>
    <string name="mine_lesson_day">Day</string>
    <string name="mine_lesson_list_teacher">教师：</string>
    <string name="mine_lesson_list_qq">QQ：</string>
    <string name="mine_lesson_list_already_lesson">已排课程：</string>
    <string name="mine_lesson_list_remainder_lesson">剩余课程：</string>


    <!-- 设置 -->
    <string name="my_setting">设置</string>
    <string name="my_setting_person">个人信息</string>
    <string name="my_setting_warn">上课提醒设置</string>
    <string name="my_setting_feedback">意见反馈</string>
    <string name="my_setting_recommend">备考APP推荐</string>
    <string name="my_setting_quit">退出账号</string>
    <string name="my_setting_person_nickname">昵称</string>
    <string name="my_setting_person_phone">手机号码</string>
    <string name="my_setting_clear_cahce">清除缓存</string>
    <string name="my_setting_clear_cache_finish">缓存清除完毕！</string>
    <string name="my_setting_person_qq">QQ</string>
    <string name="my_setting_person_modify_code">修改密码</string>
    <string name="modify_current_code">请输入当前密码</string>
    <string name="modify_new_password">请输入6-16位新密码</string>
    <string name="modify_again_password">请再次输入密码</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="reinput_pwd">请再次输入密码</string>
    <string name="pwd_length_error">密码必须为6-16位</string>
    <string name="re_pwd_not_equal">两次输入的密码不相同</string>
    <string name="chang_password">修改密码中，请稍后...</string>
    <string name="chang_password_finish">登录密码修改成功！\n请重新登录</string>
    <string name="remind_class">提醒设置</string>
    <string name="us_error">没有应用市场,请安装市场后重试</string>
    <string name="feedback_hint">请输您对小站APP的意见和建议，您的反馈对\n我们非常重要</string>
    <string name="input_your_feedback">请输入您的意见和建议</string>


    <string name="timetable_loading">课表加载中...</string>

    <!-- 调课申请 -->
    <string name="change_class">调课申请</string>
    <string name="login_input_change_lesson">请输您的调课原因</string>
    <string name="change_class_time">需调课的时间</string>
    <string name="change_class_lesson">所需调整的课程</string>
    <string name="change_class_warn">请将可调课的时间范围写的尽量大一些,这样可增加调课\n的成功率,谢谢!</string>
    <string name="login_input_change_lesson_time">请输您的调课时间\n例:9月20日-10月5日（每天8:00、20:00不可上\n课) 注意:系统课程时间段为:8:00;10:00;13:00;
        \n15:00;18:00;20:00海外学生请写明自己所在地及时差,\n如:美国东部,差13个小时</string>
    <string name="change_lesson_submit">提交</string>
    <string name="get_change_lesson">获取数据中,请稍后...</string>
    <string name="change_lesson_submiting">提交中,请稍后...</string>
    <string name="change_lesson_submit_success">调课申请提交成功!\n请耐心等待调课结果!</string>

    <string name="mine_setting_feedback_submit_success">反馈已经成功提交!</string>
    <string name="mine_setting_feedback_empty">请填写反馈内容!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
