<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="14dp">

        <LinearLayout
            android:id="@+id/change_lesson"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white"
            android:minHeight="@dimen/min_item_height"
            android:orientation="horizontal"
            android:padding="14dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="@string/change_class_lesson"
                android:textColor="#333333"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_change_lesson_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/text_color_content"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:id="@+id/right_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_lesson_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:minHeight="@dimen/min_item_height"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/change_class_time"
                android:textColor="#333333"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_change_time_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/text_color_content"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/arrow_right" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_changlesson_reason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_white_rounded_with_border_selector"
            android:gravity="top"
            android:hint="@string/login_input_change_lesson"
            android:minHeight="@dimen/mine_studyadviser_height"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:textColorHint="@color/text_color_content"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_changlesson_memo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_white_rounded_with_border_selector"
            android:gravity="top"
            android:hint="@string/login_input_change_lesson_time"
            android:minHeight="@dimen/mine_studyadviser_height"
            android:paddingBottom="30dp"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:textColorHint="@color/text_color_content"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:text="@string/change_class_warn"
            android:textColor="#20A6FB"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/text_white_bg_blue_btn_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/change_lesson_submit"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>
