<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/gridview_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_blue_rounded"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_white_rounded_bottom"
            android:layout_marginLeft="10dp"

            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="#333333"
                    android:text="@string/mine_lesson_list_teacher"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/gridview_techer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/blue"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="#333333"
                    android:text="@string/mine_lesson_list_qq"
                    />
                <TextView
                    android:id="@+id/gridview_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_color_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_color_content"
                    android:text="@string/mine_lesson_list_already_lesson"/>
                <TextView
                    android:id="@+id/gridview_remaiLessonCnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_color_content"
                    />
                </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_color_content"
                    android:text="@string/mine_lesson_list_remainder_lesson"/>
                <TextView
                    android:id="@+id/gridview_totalLessonCnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/blue"/>
                </LinearLayout>



        </LinearLayout>
</LinearLayout>